--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -1,7 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
 
 @layer base {
   :root {
@@ -50,7 +49,6 @@
     --ring: 224.3 76.3% 48%;
   }
 }
- 
 
 @layer base {
   * {
@@ -61,5 +59,5 @@
   }
 }
 .ck-editor__editable_inline {
-    @apply min-h-96 flex-grow min-w-0 max-h-full
+  @apply max-h-full min-h-96 min-w-0 flex-grow;
 }
